<resources>
    <string name="app_name">Popflix</string>
    <string name="trending_celebs">Trending Celebs</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="movies">Movies</string>
    <string name="movies_and_tvshows">Movies and Tv Shows</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="search_for_movies_and_tv_shows">Search for Movies and Tv Shows</string>
    <string name="synopsis">Synopsis</string>
    <string name="cast">Cast</string>
    <string name="release_date">Release date</string>
    <string name="crew">Crew</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Lost connection</string>
    <string name="search_button">Search Button</string>
    <string name="back_button">Back button</string>
</resources>